# quiet-conflicts

./: .gitignore  README.md  proposal.md  pyproject.toml
data/: migration.csv  population.csv  quickdata.csv  quickdata2.csv
data/world-administrative-boundaries/: world-administrative-boundaries.dbf
scratch/: d3_recreation.csv  scratchpad.ipynb
src/: data_cleaner.py
static_draft/: about.md  data_cleaner.py
