[tool.poetry]
name = "quiet-conflicts"
version = "0.1.0"
description = ""
authors = ["paul soltys <pjsol79@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
altair = "^5.4.1"
jupyter = "^1.1.1"
vegafusion = {extras = ["embed"], version = "^1.6.9"}
geopandas = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
